--- a/modal.css
+++ b/modal.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  /* background-image: url("background.png"); */
+  /*background-image: url("background.png");*/
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -226,12 +226,12 @@ input {
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
+
 input[data-error]::after {
     content: attr(data-error);
     font-size: 0.4em;
     color: red;
-} */
+} 
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -448,7 +448,6 @@ input[data-error]::after {
 }
 .btn-signup {
   outline: none;
-  
   font-size: 1.3rem;
   padding: 15px 23px;
   margin: 0;
@@ -527,3 +526,16 @@ footer {
   }
 }
 
+
+/* style pages sup from nav*/
+.backarrow{
+  color: #061098;
+  font-size: 2rem;
+  margin-right: 25rem;
+}
+
+h3{
+  margin-top: 20rem;
+  padding: 2rem;
+  border: 4px #061098 dashed;
+}
