--- a/modal.css
+++ b/modal.css
@@ -545,3 +545,12 @@ span{
   font-size: 1rem;
 }
 
+
+/*Bordure champs de saisie*/
+input:invalid {
+  border: 2px dashed red;
+}
+
+input:valid {
+  border: 2px solid black;
+}
