--- a/modal.css
+++ b/modal.css
@@ -546,9 +546,13 @@ span{
 
 /*Bordure champs de saisie*/
 input:invalid {
-  border: 2px dashed red;
+  border: 2px dashed red;     /**/
 }
 
 input:valid {
   border: 2px solid black;
+}
+
+#confirmation{
+display: none;
 }
